# broadcast

./: BROADCAST_V2_PRD.md  Cargo.toml  LICENSE  README.md  broadcast-gui.desktop
.github/workflows/: ci.yml  release.yml
aur/broadcast-bin/: PKGBUILD
aur/broadcast-git/: PKGBUILD
broadcast-core/: Cargo.toml
broadcast-core/src/: backend.rs  filter.rs  lib.rs  pipewire.rs  routing.rs  state.rs  test_helpers.rs
broadcast-ctl/: Cargo.toml
broadcast-ctl/src/: main.rs
broadcast-gui/: Cargo.toml
broadcast-gui/src/: app.rs  app_row.rs  main.rs  window.rs
broadcast-maxine-ladspa/: CMakeLists.txt  Cargo.toml  README.md  build.rs
broadcast-maxine-ladspa/src/: lib.rs  maxine_ladspa.c
examples/: 50-deepfilter-input.conf  50-deepfilter-output.conf
scripts/: install-maxine-sdk.sh
